k8s/apps/litomi/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: litomi-prod
  labels:
    # Pod Security Standards (PSA)
    # https://kubernetes.io/docs/concepts/security/pod-security-admission/
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    # NOTE: For stricter upgrade stability, you can pin to your cluster minor version (e.g. v1.33).
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn-version: latest
