k8s/apps/litomi/overlays/prod/patch-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litomi-api
spec:
  template:
    spec:
      containers:
        - name: api
