k8s/apps/litomi/overlays/prod/patch-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litomi-backend
spec:
  template:
    spec:
      containers:
        - name: backend
