k8s/apps/litomi/overlays/prod/patch-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litomi-web
spec:
  template:
    spec:
      containers:
        - name: web
