k8s/apps/litomi/overlays/prod/service-secondary-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: secondary-postgres
spec:
  type: ExternalName
  externalName: host.orb.internal
  ports:
    - name: postgres
      port: 5432
